--- a/README
+++ b/README
@@ -1,7 +1,9 @@
-## learncards-web 
+## Peta
 
-In time, the name learncards-web gets deprecated. This project was used in my education-time as developer for my own, and i used it like a framework for diffrent projects in scool.
-One example which will not be updated is <a href="https://github.com/skamster/death-guestbook">death-guestbook</a>, which is written in one day and is fully working with users and roles.
+The name Peta came out of PHPMeta. It’s basicly written in PHP with the use of smarty (template/.tpl-files) and dojo (Javascript). The idea behind this project is to avoid redundant rewrites. A maingoal is a good structure, where the administrator of a system could change things as he need.
+
+<del>In time, the name learncards-web gets deprecated. This project was used in my education-time as developer for my own, and i used it like a framework for diffrent projects in scool.
+One example which will not be updated is <a href="https://github.com/skamster/death-guestbook">death-guestbook</a>, which is written in one day and is fully working with users and roles.</del>
 
 ### Setup
 https://github.com/skamster/Peta/wiki/Installation
